# snipple

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: release.yaml  tests.yaml
docs/man/: snipple.1.md
docs/releases/: 0.1.0.md  0.1.1.md  0.1.2.md
fixtures/: simple_config.yaml  test_config.yaml
fixtures/snippets/: not.a-snippet
man/: snipple.1.md
src/: alfred.rs  config.rs  main.rs  snipple.rs
utils/alfred/: snipple.alfredworkflow
