[package]
name = "snipple"
author = "mrtazz"
version = "0.1.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/mrtazz/snipple"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
current_platform = "0.2.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
